[package]
name = "dynamo-db"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.40.0"
axum = "0.7.5"
dotenv = "0.15.0"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
